--- a/index.html
+++ b/index.html
@@ -12,7 +12,42 @@
   <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
-  
+  <main class="content-container">
+    <header class="header">
+      <img class="logo" src="" alt="Orion Logo">
+    </header>
+
+    <section class="login-box">
+      <ul class="social-media-auth">
+        <li><a class="social-login">Continue With Twitter</a></li>
+        <li><a class="social-login">Continue With Google</a></li>
+        <li><a class="social-login">Continue With Reddit</a></li>
+      </ul>
+      <form class="login-form" action="#" method="post">
+        <label for="username">Email address or username
+          <input id="username" type="text" placeholder="Email address or username" required>
+        </label>
+
+        <label for="password">Password
+          <input id="password" type="password" placeholder="Password" required>
+        </label>
+
+        <a href="#">Forgot your password?</a>
+
+        <label for="remember-me">
+          <input id="remember-me" type="checkbox"> Remember me
+        </label>
+
+        <button type="submit">Log In</button>
+      </form>
+      
+      <section class="sign-up">
+        <h2>Don't have an account?</h2>
+        
+        <a class="sign-up-btn" href="#">Sign Up</a>
+      </section>
+    </section>
+  </main>
   <script src="./js/app.js"></script>
 </body>
 </html>
