Add logo image to header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main class="content-container">
     <header class="header">
-      <img class="logo" src="" alt="Orion Logo">
+      <img class="logo" src="./images/orion-logo-transparent.png" alt="Orion Logo">
     </header>
 
     <section class="login-box">
