Update layout by adding divders between content within .login-box element and changing style of .sign-up h2

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <li><a href="#" class="social-login google">Continue With Google</a></li>
         <li><a href="#" class="social-login reddit">Continue With Reddit</a></li>
       </ul>
+
+      <div class="divider">
+        <p>or</p>
+      </div>
+
       <form class="login-form" action="#" method="post">
         <label for="username">Email address or username
           <input id="username" type="text" placeholder="Email address or username" required>
