Alter login button alignment on larger screens

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -29,11 +29,11 @@
       </div>
 
       <form class="login-form" action="#" method="post">
-        <label for="username">Email address or username
+        <label class="username" for="username">Email address or username
           <input id="username" type="text" placeholder="Email address or username" required>
         </label>
 
-        <label for="password">Password
+        <label class="password" for="password">Password
           <input id="password" type="password" placeholder="Password" required>
         </label>
 
